[package]
name = "binary"
version = "0.1.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
autobins = false

[dependencies]
ckb-vm-contrib = { path = "../ckb-vm-contrib", features = ["llvm-aot"] }
ckb-vm = "0.21.6"
ckb-vm-definitions = "0.21.6"
tempfile = "3.3.0"

[[bin]]
name = "ast_interpreter64"
path = "src/ast_interpreter64.rs"

[[bin]]
name = "ast_interpreter32"
path = "src/ast_interpreter32.rs"

[[bin]]
name = "llvm_aot64"
path = "src/llvm_aot64.rs"

[[bin]]
name = "disassembler64"
path = "src/disassembler64.rs"

[[bin]]
name = "disassembler32"
path = "src/disassembler32.rs"
